yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: webapp-service
spec:
 selector:
   role: webapp
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 32000
 type: NodePort
