yamls/complete.yaml
apiVersion: v1
kind: Service
metadata:
 name: webapp-service
spec:
 selector:
   role: webapp
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 32000
 type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp-deployment
 labels:
   role: webapp
spec:
 replicas: 1
 selector:
   matchLabels:
     role: webapp
 template:
   metadata:
     labels:
       role: webapp
   spec:
     containers:
     - name: app
       image: "eazyt/my-webapp:v2"
     - name: web
       image: "eazyt/nginxsidecar:v2"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: webapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
