yamls/dep.yaml
apiVersion: v1
kind: Service
metadata:
 name: webapp-service
spec:
 selector:
   role: webapp
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 32000
#type: NodePort
 type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp-deployment
 labels:
   role: webapp
spec:
 replicas: 1
 selector:
   matchLabels:
     role: webapp
 template:
   metadata:
     labels:
       role: webapp
   spec:
     containers:
     - name: app
       image: "eazyt/my-webapp:v2"
     - name: web
       image: "eazyt/nginxsidecar:v2"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.homelab.local
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp-service
              servicePort: 80
