yamls/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.homelab.local
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp-service
              servicePort: 80
